--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -96,6 +96,7 @@ $success-600: map-get($success-pallete, 600);
 
 $mobile-width: 599px;
 $big-screen-width: 1200px;
+$header-height: 64px;
 
 $gold: gold;
 $silver: silver;
