--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,109 +1,48 @@
-<a class="brand" routerLink="/"> Biomercs </a>
-<div class="end" *ngLet="isMediumScreen$ | async as isMediumScreen">
-  <ng-container *ngIf="isLogged$ | async; else notLogged">
-    <ng-container *ngIf="user$ | async as user">
-      <ng-container *ngIf="isMediumScreen">
-        <a class="world-records" bioButton routerLink="/score/world-record/table" queryParamsHandling="preserve">
-          <icon mdi="trophy"></icon>
-          World records
-        </a>
-        <a bioButton routerLink="/score/leaderboards" queryParamsHandling="preserve">
-          <icon>leaderboard</icon>
-          Leaderboards
-        </a>
-        <a bioButton routerLink="/score/add" queryParamsHandling="preserve">
-          <icon>add</icon>
-          Submit score
-        </a>
-        <a
-          bioButton
-          routerLink="/admin/approval"
-          queryParamsHandling="preserve"
-          [bioBadge]="headerQuery.adminApprovalCount$ | async"
-          *ngIf="user.admin"
-        >
-          <icon>checklist</icon>
-          Scores approval (Admin)
-        </a>
-        <a
-          bioButton
-          [routerLink]="pathToScoreApproval$ | async"
-          queryParamsHandling="preserve"
-          [bioBadge]="headerQuery.playerApprovalCount$ | async"
-        >
-          <icon>checklist</icon>
-          Scores approval
-        </a>
-        <a
-          bioButton
-          [routerLink]="pathToScoreChangeRequests$ | async"
-          queryParamsHandling="preserve"
-          [bioBadge]="headerQuery.playerRequestChangesCount$ | async"
-        >
-          <icon>sync_alt</icon>
-          Score change requests
-        </a>
-      </ng-container>
-      <button type="button" bioButton [menuTrigger]="menu">
-        <icon>person</icon>
-        {{ user.username }}
-        <icon class="triangle" mdi="triangle"></icon>
+<ng-container *ngLet="user$ | async as user">
+  <ng-container *ngLet="isSmallScreen$ | async as isSmallScreen">
+    <bio-side-menu
+      *ngIf="(sideMenuOpened$ | async) && user"
+      [user]="user"
+      [isSmallScreen]="isSmallScreen"
+      (menuSelected)="toggleSideMenu($event)"
+    ></bio-side-menu>
+    <div class="brand-wrapper">
+      <button bioButton icon type="button" (click)="toggleSideMenu($event)">
+        <icon>menu</icon>
       </button>
-      <bio-menu #menu>
-        <a bioButton menuItem [routerLink]="pathToProfile$ | async"> <icon>person</icon> Profile </a>
-        <ng-container *ngIf="!isMediumScreen">
-          <a menuItem bioButton routerLink="/score/leaderboards" queryParamsHandling="preserve">
-            <icon>leaderboard</icon>
-            Leaderboards
-          </a>
-          <a menuItem bioButton routerLink="/score/add" queryParamsHandling="preserve">
-            <icon>add</icon>
-            Submit score
-          </a>
-          <a
-            menuItem
-            bioButton
-            routerLink="/admin/approval"
-            queryParamsHandling="preserve"
-            [bioBadge]="headerQuery.adminApprovalCount$ | async"
-            [bioBadgeOverlap]="false"
-            *ngIf="user.admin"
-          >
-            <icon>checklist</icon>
-            Scores approval (Admin)
-          </a>
-          <a
-            menuItem
-            bioButton
-            [routerLink]="pathToScoreApproval$ | async"
-            queryParamsHandling="preserve"
-            [bioBadge]="headerQuery.playerApprovalCount$ | async"
-            [bioBadgeOverlap]="false"
-          >
-            <icon>checklist</icon>
-            Scores approval
-          </a>
-          <a
-            menuItem
-            bioButton
-            [routerLink]="pathToScoreChangeRequests$ | async"
-            queryParamsHandling="preserve"
-            [bioBadge]="headerQuery.playerRequestChangesCount$ | async"
-            [bioBadgeOverlap]="false"
-          >
-            <icon>sync_alt</icon>
-            Score change requests
-          </a>
-        </ng-container>
-        <button type="button" bioButton menuItem (click)="logout()">
-          <icon>logout</icon>
-          Logout
+      <a class="brand" routerLink="/"> Biomercs </a>
+    </div>
+    <div class="end">
+      <ng-container *ngIf="isLogged$ | async; else notLogged">
+        <a
+          bioButton
+          [icon]="!isSmallScreen"
+          routerLink="/score/add"
+          queryParamsHandling="preserve"
+          tooltip="Submit score"
+          tooltipPosition="bottom"
+          [tooltipDisabled]="isSmallScreen"
+        >
+          <icon>add</icon>
+          <ng-container *ngIf="isSmallScreen">Submit score</ng-container>
+        </a>
+        <button type="button" bioButton [menuTrigger]="menu">
+          <icon>person</icon>
+          {{ user.username }}
+          <icon class="triangle" mdi="triangle"></icon>
         </button>
-      </bio-menu>
-    </ng-container>
+        <bio-menu #menu>
+          <a bioButton menuItem [routerLink]="pathToProfile$ | async"> <icon>person</icon> Profile </a>
+          <button type="button" bioButton menuItem (click)="logout()">
+            <icon>logout</icon>
+            Logout
+          </button>
+        </bio-menu>
+      </ng-container>
+      <ng-template #notLogged>
+        <a bioButton routerLink="/auth/register">Register</a>
+        <a bioButton routerLink="/auth/login">Login</a>
+      </ng-template>
+    </div>
   </ng-container>
-  <ng-template #notLogged>
-    <a bioButton routerLink="/auth/register">Register</a>
-    <a bioButton routerLink="/auth/login">Login</a>
-  </ng-template>
-</div>
+</ng-container>
