--- a/src/app/score/score-shared/score-list/score-list.component.html
+++ b/src/app/score/score-shared/score-list/score-list.component.html
@@ -9,7 +9,7 @@
       setQueryParamsOnChange
     ></pagination>
     <bio-list selectable>
-      <bio-list-item *ngFor="let score of scores; trackBy: trackByScoreVW" (click)="scoreClicked.emit(score)">
+      <bio-list-item *ngFor="let score of scores; trackBy: trackByScore" (click)="scoreClicked.emit(score)">
         <bio-list-item-line> [{{ score.platformShortName }}] {{ score.gameName }} </bio-list-item-line>
         <bio-list-item-line> {{ score.miniGameName }} {{ score.modeName }} </bio-list-item-line>
         <bio-list-item-line>
