--- a/src/app/header/side-menu/side-menu.component.html
+++ b/src/app/header/side-menu/side-menu.component.html
@@ -21,34 +21,31 @@
   <bio-list-item
     routerLink="/admin/approval"
     queryParamsHandling="preserve"
-    [bioBadge]="headerQuery.adminApprovalCount$ | async"
-    [bioBadgeOverlap]="false"
     (click)="onMenuSelected($event)"
     *ngIf="user.admin"
   >
     <icon prefix>checklist</icon>
     Scores approval (Admin)
+    <bio-badge suffix>{{ headerQuery.adminApprovalCount$ | async }}</bio-badge>
   </bio-list-item>
   <bio-list-item
     [routerLink]="user.player?.id ? ['player', user.player!.id, 'approval'] : ['/player/u', user.id, 'approval']"
     queryParamsHandling="preserve"
-    [bioBadge]="headerQuery.playerApprovalCount$ | async"
-    [bioBadgeOverlap]="false"
     (click)="onMenuSelected($event)"
   >
     <icon prefix>checklist</icon>
     Scores approval
+    <bio-badge suffix>{{ headerQuery.playerApprovalCount$ | async }}</bio-badge>
   </bio-list-item>
   <bio-list-item
     [routerLink]="
       user.player?.id ? ['/player', user.player!.id, 'change-requests'] : ['player/u', user.id, 'change-requests']
     "
     queryParamsHandling="preserve"
-    [bioBadge]="headerQuery.playerRequestChangesCount$ | async"
-    [bioBadgeOverlap]="false"
     (click)="onMenuSelected($event)"
   >
     <icon prefix>sync_alt</icon>
     Score change requests
+    <bio-badge suffix>{{ headerQuery.playerRequestChangesCount$ | async }}</bio-badge>
   </bio-list-item>
 </bio-list>
