--- a/src/app/score/score-world-record/score-world-record-table/score-world-record-table.component.html
+++ b/src/app/score/score-world-record/score-world-record-table/score-world-record-table.component.html
@@ -1,4 +1,4 @@
-<bio-card>
+<bio-card collapsable>
   <h3 bioCardTitle>Parameters</h3>
   <bio-card-content>
     <bio-params (paramsChange)="paramsChange($event)" [config]="paramsConfig" setQueryParamsOnChange></bio-params>
