- added mobile version of ScoreWorldRecordTableComponent - removed overflow from collapse animation - created a component to handle the collapse instead of using the collapse animation - fixed card with collapse not working very well on mobile

--- a/src/app/score/score-shared/score-list/score-list.component.html
+++ b/src/app/score/score-shared/score-list/score-list.component.html
@@ -1,4 +1,6 @@
-<bio-card [bioLoading]="loading" class="scores">
+<bio-card class="scores" [collapsable]="collapsable" [collapsed]="true">
+  <bio-loading *ngIf="loading"></bio-loading>
+  <h3 bioCardTitle *ngIf="title">{{ title }}</h3>
   <bio-card-content>
     <pagination
       *ngIf="paginationMeta"
