--- a/src/app/score/score-world-record/score-world-record-table/score-world-record-table.component.scss
+++ b/src/app/score/score-world-record/score-world-record-table/score-world-record-table.component.scss
@@ -11,3 +11,12 @@
     right: 0;
   }
 }
+
+.card-score-list {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.score-list {
+  position: relative;
+}
