--- a/src/app/score/score-shared/score-list/score-list.component.scss
+++ b/src/app/score/score-shared/score-list/score-list.component.scss
@@ -8,7 +8,11 @@
 .scores {
   background-color: v.$primary;
   color: v.$primary-600;
-  padding: 0;
+  position: relative;
+  .card-content {
+    padding-left: 0;
+    padding-right: 0;
+  }
   .list-item {
     padding: 1rem 0.75rem;
   }
