- fixed CardActions style - fixed CollapsedComponent removing the class of animating if the collapse is triggered multiple times - refactored the SocketIOService - listen to event to update the score counts

--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -47,7 +47,13 @@
       padding-top: 0;
     }
   }
+  &.has-actions {
+    .card-content {
+      padding-bottom: 0;
+    }
+  }
   .card-actions {
     @include actions('0');
+    padding: 1rem;
   }
 }
