- fixed actions mixin unit '1rem' - added component to SearchScores (not complete) - added message to ScoreListComponent when no data is found - fixed pagination styling

--- a/src/app/header/side-menu/side-menu.component.html
+++ b/src/app/header/side-menu/side-menu.component.html
@@ -1,4 +1,18 @@
 <bio-list selectable>
+  <bio-list-item routerLink="/score/search" queryParamsHandling="preserve" (click)="onMenuSelected($event)">
+    <icon prefix>search</icon>
+    Search scores
+  </bio-list-item>
+  <!--TODO added better Leaderboards layout to support mobile, for now it's disabled-->
+  <bio-list-item
+    *ngIf="isSmallScreen"
+    routerLink="/score/leaderboards"
+    queryParamsHandling="preserve"
+    (click)="onMenuSelected($event)"
+  >
+    <icon prefix>leaderboard</icon>
+    Leaderboards
+  </bio-list-item>
   <bio-list-item
     routerLink="/score/world-record/table"
     queryParamsHandling="preserve"
@@ -16,16 +30,6 @@
   >
     <icon prefix>history</icon>
     World records history
-  </bio-list-item>
-  <!--TODO added better Leaderboards layout to support mobile, for now it's disabled-->
-  <bio-list-item
-    *ngIf="isSmallScreen"
-    routerLink="/score/leaderboards"
-    queryParamsHandling="preserve"
-    (click)="onMenuSelected($event)"
-  >
-    <icon prefix>leaderboard</icon>
-    Leaderboards
   </bio-list-item>
   <bio-list-item
     routerLink="/admin/approval"
