--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -2,7 +2,7 @@
 @import '~@material/elevation/elevation-theme';
 @import 'functions';
 
-@mixin actions($margin-top: '1rem') {
+@mixin actions($margin-top: 1rem) {
   margin-top: $margin-top;
   display: flex;
   align-items: center;
