- admin now can add scores for other players (closes #4)

--- a/src/app/score/score-add/score-add-player/score-add-player.component.html
+++ b/src/app/score/score-add/score-add-player/score-add-player.component.html
@@ -15,7 +15,12 @@
     </label>
   </h3>
   <bio-card-content>
-    <form-field label="Player" *ngIf="!first" [loading]="playersLoading$ | async">
+    <form-field
+      label="Player"
+      *ngIf="!first || (isAdmin$ | async)"
+      [loading]="playersLoading$ | async"
+      [disabled]="disabled"
+    >
       <input
         bioInput
         controlName="personaName"
