- fixed the layout of AdminCreatePlayerComponent when there's an error

--- a/src/app/admin/admin-create-player/admin-create-player.component.scss
+++ b/src/app/admin/admin-create-player/admin-create-player.component.scss
@@ -1,11 +1,7 @@
 :host {
-  .card-content {
+  .fields {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     grid-gap: 1rem;
   }
-}
-
-.text-danger {
-  grid-column: 1/-1;
 }
