- updated st-utils to latest version - added CheckboxComponent - added better dev error Modal - added SelectMultipleComponent - added filterArrayMinLength operator - added new end-points to search parameters by multiple ids on Platform, Game, MiniGame, Mode, Stage and Character - finished ScoreSearchComponent (closes #7)

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -26,10 +26,7 @@
           <icon>{{ typePassword === 'password' ? 'visibility_off' : 'visibility' }}</icon>
         </button>
       </form-field>
-      <label>
-        <input type="checkbox" controlName="rememberMe" />
-        Remember me
-      </label>
+      <bio-checkbox controlName="rememberMe"> Remember me </bio-checkbox>
       <p *ngIf="error$ | async as error" class="text-danger">{{ error }}</p>
     </bio-card-content>
     <bio-card-actions end *ngLet="loading$ | async as loading">
