--- a/src/app/shared/components/select/optgroup.component.scss
+++ b/src/app/shared/components/select/optgroup.component.scss
@@ -13,4 +13,12 @@
       padding-left: 2rem;
     }
   }
+  &.multiple {
+    .checkbox-container {
+      width: unset;
+    }
+    > .label {
+      display: flex;
+    }
+  }
 }
