--- a/src/app/score/score-shared/score-info/score-info.component.html
+++ b/src/app/score/score-shared/score-info/score-info.component.html
@@ -12,15 +12,8 @@
 <div class="value">
   {{ score.score | number: '1.0-0' }}
   <ng-container *ngIf="showWorldRecord">
+    <icon mdi="trophy" *ngIf="score.isWorldRecord" tooltip="World Record" tooltipPosition="right"></icon>
     <icon
-      class="icon-wr"
-      mdi="trophy"
-      *ngIf="score.isWorldRecord"
-      tooltip="World Record"
-      tooltipPosition="right"
-    ></icon>
-    <icon
-      class="icon-wr"
       mdi="trophy-award"
       *ngIf="score.isCombinationWorldRecord"
       tooltip="Combination World Record"
@@ -45,7 +38,6 @@
   <div class="value">
     {{ player.characterName }} {{ player.characterCostumeName }}
     <icon
-      class="icon-wr"
       mdi="account-star"
       *ngIf="showWorldRecord && player.isCharacterWorldRecord"
       tooltip="Character World Record"
