--- a/src/app/shared/components/select/optgroup.component.html
+++ b/src/app/shared/components/select/optgroup.component.html
@@ -1,4 +1,13 @@
-<div class="label">{{ label }}</div>
+<div class="label">
+  <bio-checkbox
+    *ngIf="multiple"
+    [checked]="isSelected"
+    [indeterminate]="isIndeterminate"
+    (checkedChange)="onCheckedChange($event)"
+    [disabled]="isDisabled"
+  ></bio-checkbox>
+  {{ label }}
+</div>
 <div class="options">
   <ng-content></ng-content>
 </div>
