- added title to pages (closes #14)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
       (menuSelected)="toggleSideMenu($event)"
     ></bio-side-menu>
     <div class="brand-wrapper">
-      <button bioButton icon type="button" (click)="toggleSideMenu($event)">
+      <button bioButton icon type="button" (click)="toggleSideMenu($event)" *ngIf="user">
         <icon>menu</icon>
       </button>
       <a class="brand" routerLink="/"> Biomercs </a>
