- added h4 to the pages, the same title as the head.title (closes #14)

--- a/src/app/admin/admin-create-player/admin-create-player.component.html
+++ b/src/app/admin/admin-create-player/admin-create-player.component.html
@@ -1,3 +1,4 @@
+<h4 bioPageTitle></h4>
 <form [controlGroup]="form" (groupSubmit)="onSubmit()">
   <bio-card *ngLet="isInvalid$ | async as isInvalid">
     <h3 bioCardTitle>Create player</h3>
