--- a/src/app/score/score-add/score-add.component.html
+++ b/src/app/score/score-add/score-add.component.html
@@ -1,3 +1,4 @@
+<h4 bioPageTitle></h4>
 <ng-container *ngLet="{ hasMode: hasIdMode$ | async } as state">
   <bio-card class="params" collapsable>
     <h3 bioCardTitle>Parameters</h3>
