--- a/src/app/score/score-search/score-search.component.html
+++ b/src/app/score/score-search/score-search.component.html
@@ -1,3 +1,4 @@
+<h4 bioPageTitle></h4>
 <ng-container *ngLet="{ loading: loading$ | async } as state">
   <form [controlGroup]="form" (groupSubmit)="onSearch()">
     <bio-card collapsable class="params">
