- updated score related models to replace status with idScoreStatus and scoreStatusDescription - fixed approvals count when use logs in - started to rework the player profile

--- a/src/app/player/player-profile/player-profile.component.html
+++ b/src/app/player/player-profile/player-profile.component.html
@@ -26,3 +26,12 @@
     </div>
   </bio-card-content>
 </bio-card>
+<bio-score-list
+  *ngFor="let status of scoreGroupedByStatus$ | async; trackBy: trackByScoreGroupByStatus"
+  [scores]="status.scores"
+  [title]="status.description"
+  [disabledProperty]="'disabled'"
+  (scoreClicked)="openScoreInfo($event)"
+  collapsable
+>
+</bio-score-list>
