--- a/src/app/score/score-shared/score-list-responsive/score-list-responsive.component.html
+++ b/src/app/score/score-shared/score-list-responsive/score-list-responsive.component.html
@@ -4,6 +4,7 @@
     [loading]="loading"
     [itemsPerPageOptions]="itemsPerPageOptions"
     [paginationMeta]="paginationMeta"
+    [title]="title"
     (currentPageChange)="currentPageChange.emit($event)"
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
     (scoreClicked)="scoreClicked.emit($event)"
@@ -11,6 +12,7 @@
 </ng-container>
 <ng-template #scoreTable>
   <bio-table
+    [title]="title"
     [colDefs]="colDefs"
     [order]="order"
     [colDefDefault]="colDefDefault"
