--- a/src/app/score/score-shared/score-list/score-list.component.html
+++ b/src/app/score/score-shared/score-list/score-list.component.html
@@ -11,7 +11,11 @@
       setQueryParamsOnChange
     ></pagination>
     <bio-list selectable>
-      <bio-list-item *ngFor="let score of scores; trackBy: trackByScore" (click)="scoreClicked.emit(score)">
+      <bio-list-item
+        [disabled]="!!disabledProperty && !!score[disabledProperty]"
+        *ngFor="let score of scores; trackBy: trackByScore"
+        (click)="onClick(score)"
+      >
         <bio-list-item-line> [{{ score.platformShortName }}] {{ score.gameName }} </bio-list-item-line>
         <bio-list-item-line> {{ score.miniGameName }} {{ score.modeName }} </bio-list-item-line>
         <bio-list-item-line>
