--- a/src/app/shared/components/list/list.component.scss
+++ b/src/app/shared/components/list/list.component.scss
@@ -39,7 +39,7 @@
     }
   }
   &.control {
-    .list-item {
+    .list-item:not(.disabled) {
       cursor: pointer;
       transition: background-color 150ms ease;
       &:hover,
