- fixed more problems with rxjs 7

--- a/src/app/player/player-profile/player-profile.component.html
+++ b/src/app/player/player-profile/player-profile.component.html
@@ -1,4 +1,4 @@
-<bio-card *ngIf="player$ | async as player">
+<bio-card *ngIf="player$ | async as player" class="player">
   <h3 bioCardTitle>
     {{ player.personaName }}
     <button bioButton icon [disabled]="loadingRegion$ | async" [tooltip]="player.region?.name">
