--- a/src/app/player/player-profile/player-profile.component.scss
+++ b/src/app/player/player-profile/player-profile.component.scss
@@ -3,7 +3,8 @@
   grid-template-columns: repeat(auto-fit, minmax(0, 599px));
   grid-gap: 1rem;
   justify-content: center;
-  > .card {
+  > .player {
+    grid-column: 1/-1;
     .card-subtitle.about-me {
       white-space: pre;
     }
