- fixed type guard problem in the score world record component

--- a/src/app/score/score-world-record/score-world-record-table/score-world-record-table.component.html
+++ b/src/app/score/score-world-record/score-world-record-table/score-world-record-table.component.html
@@ -13,7 +13,7 @@
         title="{{ character.characterName }}{{
           character.characterCostumeName !== character.characterName ? ' ' + character.characterCostumeName : ''
         }}"
-        *ngFor="let character of scoreTopTable.scoreTables; trackBy: trackByScoreTable"
+        *ngFor="let character of scoreTopTable.scoreTables; trackBy: trackByScoreTableWithoutUndefined"
         collapsable
         [scores]="character.scores"
         class="card-score-list"
