--- a/src/app/score/score-shared/score-list-responsive/score-list-responsive.component.html
+++ b/src/app/score/score-shared/score-list-responsive/score-list-responsive.component.html
@@ -5,6 +5,8 @@
     [itemsPerPageOptions]="itemsPerPageOptions"
     [paginationMeta]="paginationMeta"
     [title]="title"
+    [collapsable]="collapsable"
+    [disabledProperty]="disabledProperty"
     (currentPageChange)="currentPageChange.emit($event)"
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
     (scoreClicked)="scoreClicked.emit($event)"
@@ -21,6 +23,7 @@
     [metadata]="metadata"
     [itemsPerPageOptions]="itemsPerPageOptions"
     [paginationMeta]="paginationMeta"
+    [collapsable]="collapsable"
     (currentPageChange)="currentPageChange.emit($event)"
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
     (orderChange)="orderChange.emit($event)"
