--- a/src/app/score/score-shared/score-list/score-list.component.scss
+++ b/src/app/score/score-shared/score-list/score-list.component.scss
@@ -1,5 +1,9 @@
 @use 'variables' as v;
 
+:host {
+  display: block;
+}
+
 .list-item-line:not(:first-of-type) {
   font-size: 0.9em;
   color: v.$primary-400;
